# XZeroConf

./: .clang-format  .ycm_extra_conf.py  configure.ac
examples/: example_main.cpp
src/: Makefile.am  avahi_publish_server_entry.cpp  avahi_publish_server_entry.h  avahi_publish_service_entry.cpp  avahi_publish_service_entry.h  avahi_publisher.cpp  avahi_publisher.h  main.cpp  publish_server.cpp  publish_server.h  publish_server_entry.h  publish_service_entry.cpp  publish_service_entry.h  service.cpp  service.h  stub_publish_server_entry.cpp  stub_publish_server_entry.h  stub_publish_service_entry.cpp  stub_publish_service_entry.h  xzeroconf_define.h
tests/: Makefile.am  test_avahi_publisher.cpp  test_publish_avahi.cpp  test_publish_server.cpp  test_publish_stub.cpp  test_service.cpp
